# universal-task-sync

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: index.md  modules.md  uts-semantic-spec.md
plugins/uts-json/: pyproject.toml
plugins/uts-json/src/uts_json/: plugin.py
plugins/uts-tw/: pyproject.toml
plugins/uts-tw/src/uts_tw/: plugin.py
plugins/uts_github/: pyproject.toml
plugins/uts_github/src/uts_github/: auth.py  plugin.py
plugins/uts_tj3/: pyproject.toml
src/universal_task_sync/: base.py  cli.py  config.py  db.py  loader.py  models.py  reconciler.py  serialization.py
