[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "uts-json"
version = "0.1.0"
dependencies = ["universal-task-sync"]

[project.entry-points."universal_task_sync.plugins"]
json = "uts_json.plugin:JsonPlugin"
[tool.hatch.build.targets.wheel]
packages = ["src/uts_json"]
