[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uts-github"
version = "0.1.0"
dependencies = [
    "universal-task-sync",
    "requests"
]

[project.entry-points."universal_task_sync.plugins"]
github = "uts_github.plugin:GitHubPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/uts_github"]
